src/components/Sidebar/Sidebar.css
.ant-layout-sider.ant-layout-sider-dark{
  position: relative;
  max-width: 208px;
  min-width: 208px;
  flex: 0 0 208px;
  width: 208px;
  z-index: 4;

  background-color: rgba(255, 255, 255,1);
  transition: all 0.5s ease;
}

.ant-layout-sider-children{
  width: 100%;
  height: 100%; 
  /* display: grid; */
  /* grid-template-rows: 141px 1fr 1fr; */
  /* align-items: baseline; */
}

.ant-layout-sider-children .exit-block{
  height: 40px;
  align-self: end;
}

.sidebar-logo{
  margin: 30px 0px 50px 29px;
  padding: 14px 0px 17px 0px;
}

.sidebar-nav{
  padding-left: 16px;
}

li.ant-menu-item{
  display: flex;
  align-items: baseline;
  padding: 12px 0px 0px 24px;
  margin-bottom: 16px;

  border-right: 3px solid rgba(6, 17, 120, 0);

  transition: all 0.5s ease;
  cursor: pointer;
}

li.ant-menu-item:hover{
  border-right: 3px solid rgba(6, 17, 120, 1);
}

.ant-menu-item svg{
  position: relative;
  top: 3px;
}

.anticon.ant-menu-item-icon{
  color: rgba(6, 17, 120, 1);
}

.ant-menu-title-content{
  margin-left: 10px;

  font-size: 14px;
  font-weight: 400;
  line-height: 130%;
  text-align: left;

  color: rgba(38, 38, 38,1);

  flex: auto;
  min-width: 0;
  overflow: hidden;
  text-overflow: ellipsis;
}

.exit-block{
  padding: 0px 16px;
  display: flex;
  align-items: center;

  border-top: 1px solid rgba(0, 0, 0, 0.15);

  flex: auto;
  min-width: 0;
  overflow: hidden;
  text-overflow: ellipsis;
}

.ant-btn.ant-btn-link{
  position: relative;
  margin-left: 10px;
  /* padding: 4px 15px; */

  font-size: 14px;
  font-weight: 400;
  line-height: 130%;
  text-align: center;

  color: rgba(38, 38, 38,1);

  border: none;
  background: transparent;
  cursor: pointer;
}

.trigger-block{
  position: absolute;
  display: flex;
  align-items: center;
  width: 20px;
  height: 66px;
  right: -20px;


  transform: translateY(475px);
  background: rgba(255, 255, 255, 1);

  clip-path: polygon(0 0%, 90% 10%, 90% 90%, 0% 100%);
}

.anticon.anticon-menu-fold.trigger,
.anticon.anticon-menu-unfold.trigger{
  color: rgba(140, 140, 140,1); 
} 

.anticon.anticon-menu-fold.trigger svg,
.anticon.anticon-menu-unfold.trigger svg{
  width: 12px;
  height: 12px;

  z-index: 10;
}

